--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "airtable": "^0.12.2",
     "lucide-react": "^0.294.0",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
